src/test/ui/label/label_break_value_illegal_uses.stderr
error: expected one of `extern`, `fn`, or `{`, found `'b`
  --> $DIR/label_break_value_illegal_uses.rs:6:12
   |
LL |     unsafe 'b: {}
   |            ^^ expected one of `extern`, `fn`, or `{` here

error: expected `{`, found `'b`
  --> $DIR/label_break_value_illegal_uses.rs:10:13
   |
LL |     if true 'b: {}
   |     --      ^^----
   |     |       |
   |     |       expected `{`
   |     |       help: try placing this code inside a block: `{ 'b: { } }`
   |     this `if` statement has a condition, but no block

error: expected `{`, found `'b`
  --> $DIR/label_break_value_illegal_uses.rs:14:21
   |
LL |     if true {} else 'b: {}
   |                     ^^----
   |                     |
   |                     expected `{`
   |                     help: try placing this code inside a block: `{ 'b: { } }`

error: expected one of `.`, `?`, `{`, or an operator, found `'b`
  --> $DIR/label_break_value_illegal_uses.rs:18:17
   |
LL |     match false 'b: {}
   |     -----       ^^ expected one of `.`, `?`, `{`, or an operator here
   |     |
   |     while parsing this match expression

error: aborting due to 4 previous errors

